--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ body {
 }
 
 header {
-padding:0 .5rem;
+
   display: flex;
   justify-content: space-between;
-  margin: 2px 50px;
+  margin: 2px 70px;
 }
 
 #logo {
@@ -387,7 +387,7 @@ footer ul {
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
   header{
-   margin: 2rem;
+   margin: 1rem 3rem;
   }
   .hebergements-and-populaires {
     display: flex;
